--- a/audubon/package.json
+++ b/audubon/package.json
@@ -11,7 +11,7 @@
     "react-image": "^2.2.2",
     "react-router": "^5.1.2",
     "react-router-dom": "^5.1.2",
-    "react-scripts": "3.3.0"
+    "react-scripts": "^3.4.3"
   },
   "scripts": {
     "start": "react-scripts start",
