--- a/.gitignore
+++ b/.gitignore
@@ -7,7 +7,9 @@
 .LSOverride
 
 # Icon must end with two \r
-Icon
+Icon
+node_modules
+
 # Thumbnails
 ._*
 # Files that might appear in the root of a volume
