--- a/.gitignore
+++ b/.gitignore
@@ -1,46 +1,24 @@
+# See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
 
-# Created by https://www.gitignore.io/api/macos,linux
+# dependencies
+/node_modules
+/.pnp
+.pnp.js
+package-lock.json
 
-### macOS ###
-*.DS_Store
-.AppleDouble
-.LSOverride
+# testing
+/coverage
 
-# Icon must end with two \r
-Icon
-node_modules
+# production
+/build
 
-# Thumbnails
-._*
-# Files that might appear in the root of a volume
-.DocumentRevisions-V100
-.fseventsd
-.Spotlight-V100
-.TemporaryItems
-.Trashes
-.VolumeIcon.icns
-.com.apple.timemachine.donotpresent
-# Directories potentially created on remote AFP share
-.AppleDB
-.AppleDesktop
-Network Trash Folder
-Temporary Items
-.apdisk
+# misc
+.DS_Store
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
 
-
-### Linux ###
-*~
-
-# temporary files which can be created if a process still has a handle open of a deleted file
-.fuse_hidden*
-
-# KDE directory preferences
-.directory
-
-# Linux trash folder which might appear on any partition or disk
-.Trash-*
-
-# .nfs files are created when an open file is removed but is still being accessed
-.nfs*
-
-# End of https://www.gitignore.io/api/macos,linux
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
